# worduelist

./: .gitignore  Makefile  get_quordle_words.js  main.py  package.json  pyproject.toml  requirements.txt  solve_waffle.py
